# math-ocr

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: README.md  basic_extraction.py  example_output.json  marking_scheme.py
src/math_ocr/: __init__.py  cli.py  client.py  config.py  latex.py  parser.py  pdf.py  pipeline.py  prompts.py
tests/: test_config.py  test_parser.py  test_pdf.py  test_prompts.py
