[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "math-ocr"
version = "0.1.0"
description = "Turn math PDFs and images into structured, LaTeX-ready data using vision LLMs."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "math-ocr contributors" }]
keywords = ["math", "ocr", "latex", "pdf", "gemini", "vision"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Multimedia :: Graphics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "openai>=1.0",
    "PyMuPDF>=1.23",
    "Pillow>=10.0",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[project.scripts]
math-ocr = "math_ocr.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/math_ocr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
